# FERS

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Doxyfile  Makefile.am  README  README.md  ReleaseNotes  SECURITY.md  config.h  configure.in  fers-xml.dtd  package.json  pnpm-lock.yaml  run_sim_tests.py
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
.github/workflows/: CMake.yml  ReleaseCMake.yml  docs.yml
cmake/: FersCompilerWarnings.cmake  FersOptions.cmake
config_validators/: CMakeLists.txt  kml_visualiser.cpp  xml_validator_output.cpp
debian/: README  changelog  control  copyright  rules
doc/equations/: equations.bib  equations.kilepr  equations.tex
docs/: CMakeLists.txt  Doxyfile
fftwcpp/: CMakeLists.txt  Makefile.am  fftwcpp.cpp  fftwcpp.h
matlab/: compare_rect_kaiser.m  dudgeoniir.m  fdphase.m  fers_upsample_p.m  fersallan.m  fersbesselI0.m  ferscsvwrite.m  fersdiff.m  fersjitter.m  ferskaiser.m  ferskaiser_polybessel.m  ferslimitalgo.m  fersmatchedfilter.m  fersnewalgo.m  fersresample.m  fersrms.m  ferswinalgo.m  freqnoisesnr.m  freqshift.m  genrect.m  loadfersHDF5.m  randpink.m  randpink_vm.m  tdfreqshift.m  testdudgeon.m  updownmixsim.m
matlab/python/: fers.py
src/: CMakeLists.txt  FindPythonLibs.cmake  Makefile.am  antenna_factory.cpp  antenna_factory.h  antenna_pattern.cpp  antenna_pattern.h  config.h  coord.cpp  coord.h  dsp_filters.cpp  fersbin.h  geometry_ops.cpp  geometry_ops.h  hdf5_export.cpp  interpolation_filter.cpp  interpolation_filter.h  interpolation_set.cpp  interpolation_set.h  jones_vector.h  logging.cpp  logging.h  main.cpp  noise_generators.cpp  noise_generators.h  object.h  path.cpp  path_utils.h  platform.cpp  platform.h  polarization_matrix.cpp  pulse_factory.cpp  python_extension.cpp  python_extension.h  radar_signal.cpp  radar_signal.h  radar_system.cpp  radar_system.h  receiver_export.cpp  response.cpp  (+72 more)
src/antenna/: CMakeLists.txt  antenna_factory.cpp  antenna_factory.h  antenna_pattern.cpp  antenna_pattern.h
src/core/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  logging.cpp  logging.h  main.cpp  object.h  parameters.cpp  parameters.h  portable_utils.h  sim_threading.cpp  sim_threading.h  thread_pool.cpp  thread_pool.h  world.cpp  world.h
src/interpolation/: interpolation_filter.cpp  interpolation_filter.h  interpolation_point.h  interpolation_set.cpp  interpolation_set.h
src/math/: CMakeLists.txt  coord.h  geometry_ops.cpp  geometry_ops.h  multipath_surface.cpp  multipath_surface.h  path.cpp  path.h  path_utils.h  polarization_matrix.cpp  polarization_matrix.h  rotation_path.cpp  rotation_path.h
src/math_utils/: CMakeLists.txt  coord.h  dsp_filters.cpp  dsp_filters.h  geometry_ops.cpp  geometry_ops.h  multipath_surface.cpp  multipath_surface.h  path.cpp  path.h  path_utils.h  polarization_matrix.cpp  polarization_matrix.h  rotation_path.cpp  rotation_path.h
src/noise/: CMakeLists.txt  falpha_branch.cpp  falpha_branch.h  noise_generators.cpp  noise_generators.h  noise_utils.cpp  noise_utils.h
src/python/: CMakeLists.txt  python_extension.cpp  python_extension.h
src/radar/: CMakeLists.txt  antenna_factory.cpp  antenna_factory.h  antenna_pattern.cpp  antenna_pattern.h  jones_vector.h  object.h  platform.cpp  platform.h  radar_obj.cpp  radar_obj.h  radar_signal.cpp  radar_signal.h  radar_system.cpp  radar_system.h  receiver.cpp  receiver.h  target.cpp  target.h  transmitter.cpp  transmitter.h
src/serial/: CMakeLists.txt  hdf5_handler.cpp  hdf5_handler.h  kml_generator.cpp  kml_generator.h  libxml_wrapper.cpp  libxml_wrapper.h  pulse_factory.cpp  pulse_factory.h  receiver_export.cpp  receiver_export.h  response.cpp  response.h  response_renderer.cpp  response_renderer.h  xml_parser.cpp  xml_parser.h
src/serialization/: CMakeLists.txt  hdf5_export.cpp  hdf5_export.h  hdf5_handler.cpp  hdf5_handler.h  libxml_wrapper.cpp  libxml_wrapper.h  pulse_factory.cpp  pulse_factory.h  receiver_export.cpp  receiver_export.h  response.cpp  response.h  response_renderer.cpp  response_renderer.h  xml_parser.cpp  xml_parser.h  xmlimport.cpp  xmlimport.h
src/signal/: dsp_filters.cpp  dsp_filters.h  jones_vector.h  radar_signal.cpp  radar_signal.h
src/signal_processing/: CMakeLists.txt  dsp_filters.cpp  dsp_filters.h  jones_vector.h  radar_signal.cpp  radar_signal.h
src/simulation/: CMakeLists.txt  noise_generators.cpp  noise_generators.h  noise_utils.cpp  noise_utils.h  response.cpp  response.h  sim_threading.cpp  sim_threading.h  timing.cpp  timing.h
src/timing/: CMakeLists.txt  prototype_timing.cpp  prototype_timing.h  timing.cpp  timing.h
test/: Makefile.am
test/regressionsuite/: runtest.sh  test1.fersxml  test2.fersxml  test3.fersxml  test4.fersxml  test5.fersxml
test/sim_tests/test1/: input.fersxml
test/sim_tests/test10/: input.fersxml
test/sim_tests/test11/: input.fersxml
test/sim_tests/test12/: input.fersxml
test/sim_tests/test13/: input.fersxml
test/sim_tests/test14/: antenna_pattern.fersxml  input.fersxml
test/sim_tests/test15/: input.fersxml  input2.fersxml
test/sim_tests/test16/: input.fersxml
test/sim_tests/test17/: input.fersxml  py_module.py
test/sim_tests/test19/: input.fersxml
test/sim_tests/test2/: input.fersxml  waveform.csv
test/sim_tests/test21/: input.fersxml
test/sim_tests/test22/: input.fersxml
test/sim_tests/test23/: input.fersxml
test/sim_tests/test3/: input.fersxml  rcs_data.fersxml
test/sim_tests/test4/: input.fersxml  input2.fersxml  waveform.csv
test/sim_tests/test5/: antenna_pattern.fersxml  input.fersxml
test/unit_tests/: CMakeLists.txt  CMakeLists.txt~  clock_test.cpp  filter_test.cpp  noisegen_test.cpp  timing_test.cpp  upsample_test.cpp
tinyxml/: CMakeLists.txt  Makefile.am
utilities/: CMakeLists.txt  cluttergen.cpp  cluttergen2d.cpp  csv2antenna.c  h52raw.cpp
xml_schema/: README.md  fers-xml.dtd  fers-xml.xsd
(+75 files in other folders)
