CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(fers)

SET(CMAKE_VERBOSE_MAKEFILE ON)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_BINARY_DIR}/config.h )

#Set compiler flags
IF (CMAKE_COMPILER_IS_GNUCXX)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -pthread -O2 -ffast-math")
ENDIF (CMAKE_COMPILER_IS_GNUCXX)

#FERS is multithreaded, boost needs to be informed
ADD_DEFINITIONS(-D_REENTRANT)

ADD_SUBDIRECTORY( fftwcpp )
ADD_SUBDIRECTORY( src )

ADD_SUBDIRECTORY( utilities )
ADD_SUBDIRECTORY( test )

