#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([fers, 0.2, mbrooker@rrsg.ee.uct.ac.za])
AC_CONFIG_SRCDIR([src/rsradar.cpp])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(fers, 0.2)

# Set the Language to c++
AC_LANG([C++])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lboost_thread':
AC_CHECK_LIB([boost_thread], [main])
AC_CHECK_LIB([fftw3], [fftw_execute_dft])
AC_CHECK_LIB([samplerate], [src_strerror])
AC_CHECK_LIB([hdf5], [H5Fcreate])
AC_CHECK_LIB([hdf5_hl], [H5LTmake_dataset_double])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stddef.h stdlib.h string.h sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([clock_gettime floor memmove memset pow sqrt strcasecmp strchr])

# The default float type is double, unless specified otherwise
AC_DEFINE(rsFloat, double, "Floating point type to use for arithmetic")

# Check if we are in debug mode
AC_ARG_WITH(
	[release],
	[AC_HELP_STRING([--with-release], \
	[Optimise and strip debugging info])],
	[CXXFLAGS="-O2 -Wall -ansi"], [CXXFLAGS="-g -Wall -Wno-deprecated -Woverloaded-virtual"])

#Check if the user wants us to build with long double support
AC_ARG_WITH(
	[long-double],
	[AC_HELP_STRING([--with-long-double], \
	[Use long double type instead of double])],
	[AC_DEFINE(rsFloat, long double) \
	AC_DEFINE(RS_FLOAT_LONG_DOUBLE, 1, Use long double as the floating point type) \
	AC_CHECK_LIB([fftw3l], [fftwl_execute_dft])], [])

#Check if the user wants use to build with float support
AC_ARG_WITH(
	[float],
	[AC_HELP_STRING([--with-float], \
	[Use float for arithmetic, instead of double])],
	[AC_DEFINE(rsFloat, float) \
	AC_DEFINE(RS_FLOAT_FLOAT, 1, Use float as the floating point type) \
	AC_CHECK_LIB([fftw3f], [fftwf_execute_dft])], [])

# Add extra flags for libtinyxml
DEFS="TIXML_USE_STL"

AC_CONFIG_FILES([Makefile
	src/Makefile
        test/Makefile
	tinyxml/Makefile
	fftwcpp/Makefile])
AC_OUTPUT
