LDADD = ../fftwcpp/libfftwcpp.a ../tinyxml/libtinyxml.a

CFLAGS = @CFLAGS@
bin_PROGRAMS = fers
fers_SOURCES = rsdebug.cpp rsmain.cpp rsplatform.cpp rsradar.cpp rstarget.cpp rsworld.cpp \
xmlimport.cpp rsgeometry.cpp rspath.cpp rspulsefactory.cpp rssim.cpp rsthreadedsim.cpp \
rspulserender.cpp rsradarwaveform.cpp rsparameters.cpp rsobject.cpp rsantenna.cpp \
rsantennafactory.cpp rsportable.cpp rsresponse.cpp rsnoise.cpp rssignal.cpp \
rssrcdoppler.cpp rstiming.cpp \
rsdebug.h rspath.h rsportable.h rsradar.h rssim.h rsworld.h rsgeometry.h rsplatform.h \
rspulsefactory.h rstarget.h xmlimport.h rsradarwaveform.h rsparameters.h rssignal.h \
rsthreadedsim.h rsobject.h rsantenna.h rsantennafactory.h rsresponse.h rsnoise.h \
rstiming.h